--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -1,26 +1,21 @@
-name: Deploy React Site 
+name: Deploy React Site
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:
+  workflow_dispatch:   
 
-permissions:
-  contents: read
-  pages: write
-  
-concurrency: 
-  group: "pages"
-  cancel-in-progress: false
-  
 jobs:
 
   build:
+
     runs-on: ubuntu-latest
+
     steps:
+    
     - uses: actions/checkout@v3
-      
+
     - name: Setup Node
       uses: actions/setup-node@v3
       with:
@@ -28,16 +23,28 @@ jobs:
         
     - name: Install Dependencies
       run: npm install
-      
+        
     - name: Build
-      run: npm run build
+      run: npm run build -- --outDir=./dist
       
-    - uses: actions/upload-pages-artifact@v1
+    - uses: actions/upload-artifact@master
       with:
-        path: ./build
-
+        name: dist
+        path: ./dist
+        
   deploy:
+
     needs: build
+    
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/deploy-pages@v1
+    
+    - uses: actions/download-artifact@master
+      with:
+        name: dist
+        
+    - uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./dist
