Fixed vercel issue

--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.152.2",
-    "use": "^3.1.1",
-    "@vercel/analytics": "^0.0.6"
+    "use": "^3.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
